--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,6 +19,8 @@
     <TextView
         android:id="@+id/date"
         android:layout_width="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
+        android:layout_gravity="center_vertical"
+        android:gravity="right"
         android:layout_height="wrap_content" />
 </LinearLayout>
