--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -16,11 +16,27 @@
         android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/date"
+    <LinearLayout
+
+        android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:layout_gravity="center_vertical"
-        android:gravity="right"
-        android:layout_height="wrap_content" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/date"
+            android:layout_gravity="center_vertical"
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            />
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:gravity="right"
+            android:layout_height="0dp" />
+    </LinearLayout>
+
 </LinearLayout>
