--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,12 +10,25 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/location"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="3"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/location"
+            android:layout_gravity="center_vertical"
+            android:gravity="left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/country"
+            android:gravity="left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
     <LinearLayout
 
         android:layout_height="wrap_content"
@@ -27,16 +40,14 @@
             android:layout_gravity="center_vertical"
             android:gravity="right"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             />
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:gravity="right"
-            android:layout_height="0dp" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
