Adding some design change

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,16 +7,29 @@
     android:gravity="center_vertical">
     <TextView
         android:id="@+id/mag"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/magnitude_circle"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+
+       />
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/location"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAllCaps="true"
+            android:textSize="12sp"
+            android:textColor="@color/textColorEarthquakeDetails"
             android:layout_gravity="center_vertical"
             android:gravity="left"
             android:layout_width="match_parent"
@@ -25,7 +38,11 @@
             android:id="@+id/country"
             android:gravity="left"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textSize="16sp"
+            android:textColor="@color/textColorEarthquakeLocation"/>
 
     </LinearLayout>
 
@@ -34,20 +51,24 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
         <TextView
             android:id="@+id/date"
-            android:layout_gravity="center_vertical"
             android:gravity="right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"/>
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
-            android:layout_gravity="center_vertical"
             android:gravity="right"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"/>
     </LinearLayout>
 
 </LinearLayout>
