--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -57,7 +57,7 @@
         android:layout_gravity="center_vertical">
         <TextView
             android:id="@+id/date"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/textColorEarthquakeDetails"
@@ -65,7 +65,7 @@
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
-            android:gravity="right"
+            android:gravity="end"
             android:layout_height="wrap_content"
             android:textColor="@color/textColorEarthquakeDetails"
             android:textSize="12sp"/>
